<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeadActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="76dp"
        android:text="@string/Welcome"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEstimatedBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/BMR_Estimate_Label"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <TextView
        android:id="@+id/textViewCaloriesToHit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Calories_Label_Goal"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewEstimatedBMR"
        app:layout_constraintTop_toBottomOf="@+id/textViewEstimatedBMR" />

    <TextView
        android:id="@+id/textViewBMRValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill here"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEstimatedBMR"
        app:layout_constraintStart_toEndOf="@+id/textViewEstimatedBMR"
        app:layout_constraintTop_toTopOf="@+id/textViewEstimatedBMR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewCaloriesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill here"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCaloriesToHit"
        app:layout_constraintStart_toEndOf="@+id/textViewCaloriesToHit"
        app:layout_constraintTop_toTopOf="@+id/textViewCaloriesToHit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewCalorieWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your calorie intake is too low with your preferences"
        android:textColor="#ff0000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textViewCaloriesToHit"
        app:layout_constraintTop_toBottomOf="@+id/textViewCaloriesToHit" />

</FrameLayout>